# cosmosdb-agent-kit

./: .gitignore  .waza.yaml  CHANGELOG.md  CONTRIBUTING.md  README.md  apm.yml  plugin.json
.github/: GOOD_FIRST_ISSUES.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  new_rule.md
.github/workflows/: auto-trigger-tests.yaml  eval.yml
docs/: one-pager.html  presentation.html
evals/cosmosdb-best-practices/: eval.yaml
evals/cosmosdb-best-practices/fixtures/: sample.py
evals/cosmosdb-best-practices/tasks/: basic-usage.yaml  edge-case.yaml  indexing-composite.yaml  model-embed-decision.yaml  model-ttl-expiration.yaml  pattern-sproc-scope.yaml  query-point-read.yaml  sdk-singleton.yaml  should-not-trigger.yaml  throughput-autoscale.yaml
skills/cosmosdb-best-practices/: AGENTS.md  SKILL.md
skills/cosmosdb-best-practices/rules/: model-id-constraints.md  model-ttl-expiration.md  pattern-langgraph-agent-routing-cosmosdb.md  pattern-langgraph-multi-agent.md  pattern-stored-procedure-scope.md  sdk-langchain-mcp-persistent-session.md
testing/: query-distinct-keyword.test.js
testing-v2/: IMPROVEMENTS-LOG.md
testing-v2/scenarios/ecommerce-order-api/iterations/iteration-001-rust/: Cargo.toml  ITERATION.md
testing-v2/scenarios/ecommerce-order-api/iterations/iteration-001-rust/src/: cosmos.rs  handlers.rs  main.rs  models.rs
