[package]
name = "ecommerce-order-api"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ecommerce-order-api"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
azure_data_cosmos = { version = "0.31", features = ["key_auth", "hmac_rust", "allow_invalid_certificates"] }
azure_core = "0.32"
futures = "0.3"
tower-http = { version = "0.5", features = ["cors"] }
